--- a/shared/latex/supervised/naive-bayes.tex
+++ b/shared/latex/supervised/naive-bayes.tex
@@ -10,7 +10,7 @@
 
 \begin{frame}{Raisonnement bayésien}
   \begin{itemize}
-    \item Formulation d'une hypothèse sans regarder les annotations (probabilité antiérieure)
+    \item Formulation d'une hypothèse sans regarder les annotations (probabilité antérieure)
     \item Prise en compte des données pour mettre à jour l'hypothèse (probabilité postérieure)
   \end{itemize}
 \end{frame}
@@ -18,7 +18,7 @@
 \begin{frame}{Notation}
   Pour la suite, nous utiliserons la notation suivante~:
 
-  \begin{description}[<+->]
+  \begin{description}[<+(1)->]
     \item[$C$] Variable aléatoire représentant la classe d'un exemple
     \item[$C_k$] Une valeur possible de $C$
     \item[$F$] Variable aléatoire représentant les caractéristiques des exemples
