--- a/shared/latex/supervised/regression-polynomiale.tex
+++ b/shared/latex/supervised/regression-polynomiale.tex
@@ -1,18 +1,15 @@
 
-\begin{frame}
-  \frametitle{Regression Polynomiale}
+\begin{frame}{Régression polynômiale}
   Limites de la regression linéaire
   \V{["residuals-1-nzmog", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Regression Polynomiale}
+\begin{frame}{Régression polynômiale}
   Limites de la regression linéaire
   \V{["residuals-2-nzmog", "tw", 1] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Régression Polynomiale}
+\begin{frame}{Exemple de régressions polynômiales}
   \begin{minipage}[l]{0.25\linewidth}
     $Y=\underset{k \in [0..n]}{\sum}{a_k*X^k}$
   \end{minipage}\hfill
@@ -21,9 +18,8 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Gradient et mise à jour}
-  $Y=\underset{k \in [0..n]}{\sum}{a_k*X^k}$ \\
+\begin{frame}{Gradient et mise à jour}
+  $Y=\underset{k \in [0..n]}{\sum}{a_k.X^k}$ \\
   $\;$ \\
   $E_{\Omega} = \frac{1}{2n}\underset{i=[1..n]}{\sum}( \hat{Y_i} - Y_i )^2$ \\
   $\;$ \\
@@ -34,5 +30,5 @@
   $\;$ \\
   $a_k \leftarrow a_k - \gamma.\frac{\partial{E_{\Omega}}}{\partial{a_k}}$ \\
   $\;$ \\
-  où $1 > \gamma > 0$ (learning rate)
+  où $1 > \gamma > 0$ (pas d'apprentissage)
 \end{frame}
