Improve RL and GANs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -11,8 +11,10 @@
 \usepackage{epigraph}
 \usepackage{varwidth}
 \usepackage{amssymb}
+\usepackage{mathtools}
 \usepackage{tabularx}
 \usepackage{booktabs}
+\usepackage{diagbox}
 \usepackage{etoolbox}
 \usepackage{multicol}
 \usepackage{minted}
