--- a/shared/latex/en/artificial-intelligence/history.tex
+++ b/shared/latex/en/artificial-intelligence/history.tex
@@ -12,7 +12,7 @@
 \end{frame}
 
 \begin{frame}{1957: Rosenblatt's perceptron}
-  \V{["perceptron", "th", 0.6] | image}
+  \V{["perceptron", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{1972: TF-IDF}
@@ -20,7 +20,7 @@
 \end{frame}
 
 \begin{frame}{1986: error backpropagation popularized for neural networks}
-  \V{["backpropagation", "th", 0.6] | image}
+  \V{["backpropagation", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{1990: Lecun's \textbf{Lenet}, first CNN}
