--- a/shared/latex/en/reinforcement-learning/intro.tex
+++ b/shared/latex/en/reinforcement-learning/intro.tex
@@ -56,13 +56,14 @@
 
 \begin{frame}{Example --- Problem}
   Go from start to finish. Each move costs $1$ (reward of $-1$).
+
   \begin{tabular}{c|c|c|c|c|c|c}
     \cline{2-6}
      & & \cellcolor{black} & & & & \\
     \cline{2-6}
      & & \cellcolor{black} & & \cellcolor{black} & \cellcolor{black} & \\
     \cline{2-6}
-    Entrée $\rightarrow$ & \phantom{-5} & \phantom{-5} & \phantom{-5} & \phantom{-5} & \phantom{-5} & $\leftarrow$ Sortie \\
+    Entrance $\rightarrow$ & \phantom{-5} & \phantom{-5} & \phantom{-5} & \phantom{-5} & \phantom{-5} & $\leftarrow$ Exit \\
     \cline{2-6}
      & & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \\
     \cline{2-6}
@@ -80,7 +81,7 @@
       \cline{2-6}
       & -6 & \cellcolor{black} & -4 & \cellcolor{black} & \cellcolor{black} & \\
       \cline{2-6}
-      Entrée $\rightarrow$ & -5 & -4 & -3 & -2 & -1 & $\leftarrow$ Sortie \\
+      Entrance $\rightarrow$ & -5 & -4 & -3 & -2 & -1 & $\leftarrow$ Exit \\
       \cline{2-6}
       & -6 & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \\
       \cline{2-6}
@@ -98,7 +99,7 @@
       \cline{2-6}
       & $\downarrow$ & \cellcolor{black} & $\downarrow$ & \cellcolor{black} & \cellcolor{black} & \\
       \cline{2-6}
-      Entrée $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\leftarrow$ Sortie \\
+      Entrance $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\leftarrow$ Exit \\
       \cline{2-6}
       & $\uparrow$ & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \\
       \cline{2-6}
@@ -128,7 +129,7 @@
       \cline{2-6}
       & $\downarrow$ & \cellcolor{black} & $\downarrow$ & \cellcolor{black} & \cellcolor{black} & \\
       \cline{2-6}
-      Entrée $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\leftarrow$ Sortie \\
+      Entrance $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\rightarrow$ & $\leftarrow$ Exit \\
       \cline{2-6}
       & $\uparrow$ & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \cellcolor{black} & \\
       \cline{2-6}
