--- a/templates/jinja2/main.tex
+++ b/templates/jinja2/main.tex
@@ -21,7 +21,7 @@
 \pgfpagesuselayout{2 on 1}[a4paper]
 %% endif
 
-\setbeamertemplate{frame footer}{\CompanyName{} ⋅ \DeckTitle}
+\setbeamertemplate{frame footer}{\CompanyName{} ⋅ \DeckTitle{} ⋅ CC BY-SA 4.0}
 
 \author{\vfill\TrainerName}
 \institute{%
