--- a/shared/latex/en/nn/intro.tex
+++ b/shared/latex/en/nn/intro.tex
@@ -15,7 +15,7 @@
 \end{frame}
 
 \begin{frame}{Artificial neuron model}
-  \V{["neuron-model", "tw", 0.9] | image}
+  \V{["neural-networks/model", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Combination to form a neural network}
