--- a/shared/latex/en/nn/optimize.tex
+++ b/shared/latex/en/nn/optimize.tex
@@ -36,7 +36,7 @@
 
 \begin{frame}{First approach --- Batch size}
   Usually powers of 2, to optimize GPU resources
-  \V{["batch-size-effect-nzmog", "th", 0.7, "en"] | image}
+  \V{["batch-size-effect-nzmog-en", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}{First approach --- Size of layers}
