--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -267,6 +267,8 @@
 
 \newcommand{\vect}[1]{\bm{\mathbf{#1}}}
 
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+
 \newcommand{\figurecaption}[1]{{\scriptsize\textcolor{gray}{#1}}}
 
 \NewDocumentCommand\imgtw{ o m m }{%
