--- a/shared/latex/en/nn/demo.tex
+++ b/shared/latex/en/nn/demo.tex
@@ -1,4 +1,6 @@
 \begin{frame}{Demonstration}
-  \centering
-  \bluelink{https://playground.tensorflow.org/}{Neural network}
+  \begin{itemize}
+    \item \bluelink{https://playground.tensorflow.org/}{Neural network}
+    \item \bluelink{https://colab.research.google.com/drive/1tOn8mlgehhptrFIlX7ZHCKhLzSDYYrwy\#forceEdit=true&sandboxMode=true}{Simple neural networks with Keras}
+  \end{itemize}
 \end{frame}
