--- a/shared/latex/en/reinforcement-learning/intro.tex
+++ b/shared/latex/en/reinforcement-learning/intro.tex
@@ -157,11 +157,11 @@
 \end{frame}
 
 \begin{frame}{Technical \& theoretical constraints --- Stock market}
-  \V{["bourse-ny", "tw", 1] | image}
+  \V{["stock-market", "th", 0.7, "en"] | image}
 \end{frame}
 
 \begin{frame}{Technical \& theoretical constraints --- Chess}
-  \V{["echec", "th", 0.5] | image}
+  \V{["chess", "th", 0.5, "en"] | image}
   \pause
   \begin{center}
     $\approx 10^{120}$ possible games $\ggg 6 x 10^{85}$
@@ -171,7 +171,7 @@
 \end{frame}
 
 \begin{frame}{Technical \& theoretical constraints --- Go}
-  \V{["go", "th", 0.6] | image}
+  \V{["goban", "th", 0.5, "en"] | image}
   \begin{center}
     \huge{$\approx 10^{600}$}
   \end{center}
