--- a/shared/latex/en/nn/rnn/demo.tex
+++ b/shared/latex/en/nn/rnn/demo.tex
@@ -1,9 +1,9 @@
 \begin{frame}{Demonstration}
-  \centering
   \begin{itemize}
     \item \bluelink{https://projector.tensorflow.org/}{Embeddings}
     \item \bluelink{https://karpathy.github.io/2015/05/21/rnn-effectiveness/}{Recurrent neural networks interpretation}
     \item \bluelink{https://play.aidungeon.io/main/about}{AI Dungeon}
     \item \bluelink{https://www.cleverbot.com/}{Clever Bot}
+    \item \bluelink{https://colab.research.google.com/drive/1j-1snWxWpaCbSHPsbCj_Syo_u3loIdRa\#forceEdit=true&sandboxMode=true}{Author identification with RNNs}
   \end{itemize}
 \end{frame}
