--- a/shared/latex/en/reinforcement-learning/q-learning.tex
+++ b/shared/latex/en/reinforcement-learning/q-learning.tex
@@ -143,7 +143,7 @@
   \item $210 \times 160$ pixels
   \item 8 to 16 actions
   \end{itemize}
-  \V{["atari", "tw", 0.6] | image}
+  \V{["atari", "th", 0.5, "en"] | image}
 \end{frame}
 
 \begin{frame}{Technical details}
