Improve DRN English
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/reinforcement-learning/alphago.tex
+++ b/shared/latex/en/reinforcement-learning/alphago.tex
@@ -123,7 +123,7 @@
     AlphaGo vs Lee Sedol (or Fan Hui)
   \end{center}
   \huge
-  1 202 processeurs et 176 TPU
+  1 202 CPU cores and 176 TPUs
 \end{frame}
 
 \begin{frame}{AlphaGo Zero}
