Fix some DRN translations/bugs
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/intro.tex
+++ b/shared/latex/en/nn/intro.tex
@@ -3,19 +3,19 @@
 \end{frame}
 
 \begin{frame}{Relation with linear regression}
-  \V{["separable-problem-linear-solution-nzmog", "tw", 0.9] | image}
+  \V{["separable-problem-linear-solution-nzmog", "tw", 0.9, "en"] | image}
 \end{frame}
 
 \begin{frame}{Need to go beyond linear regression}
-  \V{["xor-nzmog", "tw", 0.9] | image}
+  \V{["xor-nzmog", "tw", 0.9, "en"] | image}
 \end{frame}
 
 \begin{frame}{(Weak) relation with biology}
-  \V{["biological-neuron", "tw", 1] | image}
+  \V{["biological-neuron", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Artificial neuron model}
-  \V{["neural-networks/model", "tw", 0.9] | image}
+  \V{["neural-networks/model-en", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Combination to form a neural network}
