--- a/shared/latex/en/nn/demo.tex
+++ b/shared/latex/en/nn/demo.tex
@@ -1,6 +1,5 @@
 \begin{frame}{Demonstration}
-  \begin{itemize}
-    \item \bluelink{https://playground.tensorflow.org/}{Neural network}
-    \item \bluelink{https://colab.research.google.com/drive/1tOn8mlgehhptrFIlX7ZHCKhLzSDYYrwy\#forceEdit=true&sandboxMode=true}{Simple neural networks with Keras}
-  \end{itemize}
+  \begin{center}
+    \bluelink{https://colab.research.google.com/drive/1tOn8mlgehhptrFIlX7ZHCKhLzSDYYrwy\#forceEdit=true&sandboxMode=true}{Simple neural networks with Keras}
+  \end{center}
 \end{frame}
