Add keras to CNN and RNN for DRN English
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/cnn/model.tex
+++ b/shared/latex/en/nn/cnn/model.tex
@@ -85,3 +85,7 @@
     \end{description}
   \end{minipage}\hfill
 \end{frame}
+
+\begin{frame}{Demonstration}
+  \bluelink{https://www.cs.ryerson.ca/~aharley/vis/conv/}{Convolutional neural networks}
+\end{frame}
