Add text generation with transformers to DRN English demos
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/rnn/demo.tex
+++ b/shared/latex/en/nn/rnn/demo.tex
@@ -5,5 +5,6 @@
     \item \bluelink{https://play.aidungeon.io/main/about}{AI Dungeon}
     \item \bluelink{https://www.cleverbot.com/}{Clever Bot}
     \item \bluelink{https://colab.research.google.com/drive/1j-1snWxWpaCbSHPsbCj_Syo_u3loIdRa\#forceEdit=true&sandboxMode=true}{Author identification with RNNs}
+    \item \bluelink{https://colab.research.google.com/drive/1jFW9TDiwIoRupGLgvjuJtOpSAyIEb6uZ\#forceEdit=true&sandboxMode=true}{Text generation}
   \end{itemize}
 \end{frame}
