Fix small typos, replace kubeflow by pachyderm
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/reinforcement-learning/intro.tex
+++ b/shared/latex/en/reinforcement-learning/intro.tex
@@ -27,7 +27,7 @@
 \begin{frame}{Types of task}
   \begin{description}[<+->]
     \item[Episodic] Clear start and end (\textit{e.g.} until Game Over in a video game)
-    \item[Continuous] Unclear start, no end (\textit{e.g.} stock market
+    \item[Continuous] Unclear start, no end (\textit{e.g.} stock market)
   \end{description}
 \end{frame}
 
