--- a/shared/latex/en/tools/apis.tex
+++ b/shared/latex/en/tools/apis.tex
@@ -10,7 +10,7 @@
 
 \begin{frame}{Types of available APIs}
   \begin{itemize}[<+->]
-    \item Computer vision (image, vidéo)
+    \item Computer vision (image, video)
     \item Natural language processing (sentiment analysis, translation, named entity recognition, …)
     \item Speech to text, text to speech
     \item Chatbots
