--- a/shared/latex/en/tools/engineering.tex
+++ b/shared/latex/en/tools/engineering.tex
@@ -11,7 +11,7 @@
   \begin{itemize}[<+(1)->]
     \item \bluelink{https://mlflow.org/}{mlflow}
     \item \bluelink{https://github.com/iterative/dvc}{dvc}
-    \item \bluelink{https://www.kubeflow.org/}{Kubeflow}
+    \item \bluelink{https://www.pachyderm.com/}{Pachyderm}
   \end{itemize}
 
   \onslide<+(1)->{Proprietary~:}
