Split stuff in unsupervised
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/unsupervised/clustering/intro.tex
+++ b/shared/latex/unsupervised/clustering/intro.tex
@@ -7,10 +7,11 @@
 \end{frame}
 
 \begin{frame}{Approches}
-  On distingue deux grandes familles~:
+  On distingue trois grandes familles~:
 
   \begin{itemize}[<+->]
     \item K-means et ses algorithmes dérivés
     \item Les algorithmes agglomératifs
+    \item Les algorithmes d'estimation de densité
   \end{itemize}
 \end{frame}
