--- a/shared/latex/unsupervised/dimensionality-reduction/intro.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/intro.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{Problématique}
+\begin{frame}{Problématique}
     \begin{center}
       Comment appréhender des données en grande dimension ?
     \end{center}
@@ -33,8 +32,7 @@
   \end{alertblock}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Approches}
+\begin{frame}{Approches}
     \begin{itemize}
     \item Séléction de dimensions
     \item Projections linéaires (ACP, LDA, …)
