Use the new tikz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -82,5 +82,5 @@
 
   Réseaux de neurones $\iff$ enchaînement de multiplications matricielles avec des millions de paramètres.
 
-  \V{["img/deep-auto-encoder", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/cnn/deep-auto-encoder", "tw", 1] | image}
 \end{frame}
