--- a/shared/latex/en/nn/rnn/rnn.tex
+++ b/shared/latex/en/nn/rnn/rnn.tex
@@ -9,7 +9,7 @@
 \end{frame}
 
 \begin{frame}{Model}
-  \V{["img/rnn-unfold", "tw", 0.7] | image}
+  \V{["tikz/neural-networks/rnn/simple-unfold", "th", 0.3] | image}
   \begin{align*}
     \vect{h_t} &= \sigma_h(\vect{U} \vect{x_t} + \vect{V} \vect{h_{t-1}} + \vect{b_h}) \\
     \vect{o_t} &= \sigma_o(\vect{W} \vect{h_t} + \vect{b_o})
