--- a/shared/latex/nn/cnn/cnn-model.tex
+++ b/shared/latex/nn/cnn/cnn-model.tex
@@ -1,9 +1,9 @@
 \begin{frame}{Prérequis --- Opérateur de convolution}
-  \V{["img/convolution", "tw", 0.8] | image}
+  \V{["tikz/neural-networks/cnn/convolution", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Prérequis --- Opérateur de pooling}
-  \V{["img/pooling", "tw", 0.8] | image}
+  \V{["tikz/neural-networks/cnn/maxpool", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Schéma général}
