--- a/shared/latex/nn/intro.tex
+++ b/shared/latex/nn/intro.tex
@@ -15,7 +15,7 @@
 \end{frame}
 
 \begin{frame}{Modélisation d'un neurone}
-  \V{["img/neuron-model", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/model", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Modélisation d'un réseau de neurones}
