--- a/shared/latex/nn/regularisation.tex
+++ b/shared/latex/nn/regularisation.tex
@@ -22,7 +22,7 @@
 \end{frame}
 
 \begin{frame}{Par dropout}
-  \V{["img/dropout-2", "tw", 0.8] | image}
+  \V{["tikz/neural-networks/dropout", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{En entraînant sur plusieurs tâches}
