--- a/shared/latex/nn/rnn/rnn.tex
+++ b/shared/latex/nn/rnn/rnn.tex
@@ -9,7 +9,7 @@
 \end{frame}
 
 \begin{frame}{Modèle}
-  \V{["img/rnn-unfold", "tw", 0.7] | image}
+  \V{["tikz/neural-networks/rnn/simple-unfold", "th", 0.3] | image}
   $h_{t}=\sigma_{h}(Ux_{t}+Vh_{t-1}+b_{h})$ \\
   $o_{t}=\sigma_{o}(Wh_{t}+b_{o})$ \\
   \begin{itemize}
