--- a/shared/latex/sectors/intro.tex
+++ b/shared/latex/sectors/intro.tex
@@ -15,7 +15,7 @@
     \V{["img/biological-neuron", "tw", 1] | image}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \V{["img/neuron-model", "tw", 1] | image}
+    \V{["tikz/neural-networks/model", "tw", 1] | image}
   \end{minipage}\hfill
 \end{frame}
 
