--- a/shared/latex/supervised/bayes-networks.tex
+++ b/shared/latex/supervised/bayes-networks.tex
@@ -1,7 +1,7 @@
 \begin{frame}
   \frametitle{Réseaux Bayésiens}
   Graphe orienté acyclique
-  \V{["img/bayesian-net", "th", 0.6] | image}
+  \V{["tikz/bayesian/net", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -30,5 +30,5 @@
   \item Détection d'anomalie
   \item ...
   \end{itemize}
-  \V{["img/graph-oriented", "th", 0.5] | image}
+  \V{["tikz/graph/oriented", "th", 0.4] | image}
 \end{frame}
