--- a/shared/latex/supervised/trees.tex
+++ b/shared/latex/supervised/trees.tex
@@ -2,7 +2,7 @@
   \frametitle{Introduction}
   Modèle de classification ou regréssion qui classe un input dans une
   de ses feuilles pour rendre sa prédiction :
-  \V{["img/decision-tree-2", "tw", 0.9] | image}
+  \V{["tikz/tree/decision", "th", 0.6] | image}
 \end{frame}
 
 \begin{frame}
@@ -33,12 +33,12 @@
 
 \begin{frame}
   \frametitle{Arbres de classification}
-  \V{["img/decision-tree-2", "tw", 0.9] | image}
+  \V{["tikz/tree/decision", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Arbres de régression}
-  \V{["img/regression-tree", "tw", 0.9] | image}
+  \V{["tikz/tree/regression", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}
