--- a/shared/latex/nn/rnn/lstm.tex
+++ b/shared/latex/nn/rnn/lstm.tex
@@ -12,7 +12,7 @@
 \end{frame}
 
 \begin{frame}{Détails théoriques}
-  \V{["img/lstm-schema", "tw", 0.7] | image}
+  \V{["tikz/neural-networks/rnn/lstm", "th", 0.45] | image}
   \begin{description}
   \item[Forget gate] $F_t = \sigma(W_F \times x_t + U_F \times h_{t - 1} + b_F)$ 
   \item[Input gate] $I_t = \sigma(W_I \times x_t + U_I \times h_{t - 1} + b_I)$
