--- a/shared/latex/supervised/modeles-graphiques.tex
+++ b/shared/latex/supervised/modeles-graphiques.tex
@@ -5,5 +5,5 @@
   \item Noeuds $\Leftrightarrow$ Variables
   \item Arcs $\Leftrightarrow$ Probabilités conditionnelles
   \end{itemize}
-  \V{["img/graph-oriented", "th", 0.5] | image}
+  \V{["tikz/graph/oriented", "th", 0.5] | image}
 \end{frame}
